fix: restore UiController, kafka port 9094 default, apache kafka image